--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,14 +54,13 @@ jobs:
         with:
           name: charm
           path: /tmp/charm-builds/ubuntu-lite
+      # Workarounds for https://github.com/actions/upload-artifact/issues/38
+      - run: chmod +x -R /tmp/charm-builds/ubuntu-lite/hooks
       - name: Set up LXD
         run: |
           sudo usermod --append --groups lxd $(whoami)
           sudo su $(whoami) -c 'lxd init --auto'
           sudo su $(whoami) -c 'lxc network set lxdbr0 ipv6.address none'
-      - name: Change ownership of root workaround for snapcraft
-        # See https://forum.snapcraft.io/t/permissions-problem-using-snapcraft-in-azure-pipelines/13258/14?u=szeestraten
-        run: sudo chown root:root /
       - name: Set up juju
         run: |
           sudo snap install juju --classic --channel=${{ matrix.juju_channel }}
