add support for ubuntu 22.04 Jammy

--- a/tox.ini
+++ b/tox.ini
@@ -15,8 +15,8 @@ deps = pre-commit
 commands = pre-commit run --all-files --show-diff-on-failure
 
 [testenv:build]
-deps = charm-tools
-commands = charm-build --report --no-local-layers --force --log-level INFO
+allowlist_externals = charmcraft
+commands = charmcraft pack
 
 [testenv:deploy-xenial]
 deps = jujuna
