--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,9 +1,9 @@
-name: ubuntu-lite
+name: huntdatacenter-ubuntu-lite
 summary: The smallest charm I could come up with that still looks nice.
 maintainer: John Arbash Meinel <john@arbash-meinel.com>
 description: |
   Run an Ubuntu system, but don't do a whole lot else.
-series: ["xenial", "bionic", "trusty", "focal"]
+series: ["xenial", "bionic", "trusty", "focal", "jammy"]
 provides:
   ubuntu:
     interface: ubuntu
