--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands = pre-commit run --all-files --show-diff-on-failure
 
 [testenv:build]
 allowlist_externals = charmcraft
-commands = charmcraft pack
+commands = charmcraft pack -v {posargs}
 
 [testenv:deploy-xenial]
 deps = jujuna
@@ -26,6 +26,14 @@ commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:T
 deps = jujuna
 commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:TIMEOUT:600} --wait tests/bundles/bionic.yaml
 
+[testenv:deploy-focal]
+deps = jujuna
+commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:TIMEOUT:600} --wait tests/bundles/focal.yaml
+
+[testenv:deploy-jammy]
+deps = jujuna
+commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:TIMEOUT:600} --wait tests/bundles/jammy.yaml
+
 [testenv:test-xenial]
 deps = jujuna
 commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-xenial.yaml
@@ -33,6 +41,15 @@ commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-xenial.yam
 [testenv:test-bionic]
 deps = jujuna
 commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-bionic.yaml
+
+[testenv:test-focal]
+deps = jujuna
+commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-focal.yaml
+
+[testenv:test-jammy]
+deps = jujuna
+commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-jammy.yaml
+
 
 [isort]
 force_single_line = True
