--- a/tox.ini
+++ b/tox.ini
@@ -18,14 +18,6 @@ commands = pre-commit run --all-files --show-diff-on-failure
 allowlist_externals = charmcraft
 commands = charmcraft pack -v {posargs}
 
-[testenv:deploy-xenial]
-deps = jujuna
-commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:TIMEOUT:600} --wait tests/bundles/xenial.yaml
-
-[testenv:deploy-bionic]
-deps = jujuna
-commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:TIMEOUT:600} --wait tests/bundles/bionic.yaml
-
 [testenv:deploy-focal]
 deps = jujuna
 commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:TIMEOUT:600} --wait tests/bundles/focal.yaml
@@ -34,13 +26,9 @@ commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:T
 deps = jujuna
 commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:TIMEOUT:600} --wait tests/bundles/jammy.yaml
 
-[testenv:test-xenial]
+[testenv:deploy-noble]
 deps = jujuna
-commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-xenial.yaml
-
-[testenv:test-bionic]
-deps = jujuna
-commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-bionic.yaml
+commands = jujuna deploy --error-timeout {env:ERROR_TIMEOUT:60} --timeout {env:TIMEOUT:600} --wait tests/bundles/noble.yaml
 
 [testenv:test-focal]
 deps = jujuna
@@ -49,6 +37,10 @@ commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-focal.yaml
 [testenv:test-jammy]
 deps = jujuna
 commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-jammy.yaml
+
+[testenv:test-noble]
+deps = jujuna
+commands = jujuna test --timeout {env:TIMEOUT:600} tests/bundles/test-noble.yaml
 
 
 [isort]
