--- a/tests/bundles/jammy.yaml
+++ b/tests/bundles/jammy.yaml
@@ -2,5 +2,5 @@ series: jammy
 
 applications:
   ubuntu:
-    charm: /tmp/charm-builds/ubuntu-lite
+    charm: ../../ubuntu-lite.charm
     num_units: 1
