--- a/tests/bundles/noble.yaml
+++ b/tests/bundles/noble.yaml
@@ -2,5 +2,5 @@ series: noble
 
 applications:
   ubuntu:
-    charm: /home/ubuntu/vagrant/huntdatacenter-ubuntu-lite_ubuntu-20.04-amd64-arm64_ubuntu-22.04-amd64-arm64_ubuntu-24.04-amd64-arm64.charm
+    charm: ../../ubuntu-lite.charm
     num_units: 1
