--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,16 +1,18 @@
 name: huntdatacenter-ubuntu-lite
-summary: The smallest charm I could come up with that still looks nice.
-maintainer: John Arbash Meinel <john@arbash-meinel.com>
+display-name: |
+  Ubuntu Lite
 description: |
   Run an Ubuntu system, but don't do a whole lot else.
-series: ["focal", "jammy", "noble"]
+summary: |
+  The smallest charm I could come up with that still looks nice.
+maintainers:
+  - HUNT Cloud <cloud@hunt.ntnu.no>
+
 provides:
   ubuntu:
     interface: ubuntu
+
 extra-bindings:
   another:
-tags:
-  # https://jujucharms.com/docs/stable/authors-charm-metadata
-  - misc
-  - application_development
+
 subordinate: false
